# 42

./: 02  FETCH  PUSH  UPLOAD  crontab_check.sh  gnl_1_backup.c  main.c
Camagru/: add-avatar.php  author  broken.php  db_config.php  edit_profile-mobile.php  edit_profile.php  field.css  font.css  icon.css  index.html  index.php  login.html  main.css  manage-posts-mobile.php  manage-posts.php  register-mobile.php  register.html  register.php  updater.php  upload.php  upload_live.php  upostl.php  upostu.php
fillit/: #fillit.h#  .#fillit.h  .#validate_me.c  Makefile  check_me.c  fillit  fillit.h  ft_putendl.c  ft_strlen.c  help_me.c  libft.h  main.c  main.c~  read_me.c  solve_me.c  test  validate_me.c  validate_me.c~
ft_ls/: CMakeLists.txt  ft_bonus_part.c  ft_columns.c  ft_error_manager.c  ft_extended.c  ft_flag_manager.c  ft_ls.h  ft_ls_R.c  ft_ls_l.c  ft_ls_output.c  ft_ls_rh.c  ft_more_extended.c  ft_set_and_free.c  ft_sort.c  ft_write_stats.c  main.c
ft_printf/: CMakeLists.txt  Makefile  a.out  ft_get_details.c  ft_printf.h  ft_set_width.c  main.c
ft_ssl_des/: CMakeLists.txt  ft_digest.c  ft_ssl_des.h  main.c
get_next_line/: CMakeLists.txt  a.out  get_next_line.c  get_next_line.h  get_next_line_1.c  get_next_line_2.c  gnl1_3.txt  test  test0
libft/: .ft_strmap.c.swp  Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  (+31 more)
minishell/: CMakeLists.txt  ft_autocomp.c  ft_builtins.c  ft_cd.c  ft_check_exec.c  ft_easter.c  ft_echo.c  ft_env_n_unset.c  ft_envars.c  ft_fork.c  ft_handle_few.c  ft_keys.c  ft_pathfinders.c  ft_setenv.c  ft_signal.c  ft_welcome.c  get_next_line.c  main.c  minishell.h
minishell/builtins/: ft_cd.c  ft_echo.c  ft_echo_help.c  ft_env_n_unset.c  ft_getenv.c  ft_setenv.c
minishell/exec/: ft_check_exec.c  ft_fork.c  ft_handle_few.c  ft_pathfinders.c
minishell/extra/: ft_autocomp.c  ft_easter.c  ft_error.c  ft_signal.c
minishell/includes/: get_next_line.h  minishell.h
minishell/input/: ft_welcome.c  get_next_line.c
minishell/libft/: ft_arrclr.c  ft_int_base.c  ft_putendl.c  ft_strdel.c  ft_strlen.c  ft_strncpy.c  ft_strsub.c
minishell/libft/includes/: libft.h
(+340 files in other folders)
