cmake_minimum_required(VERSION 3.9)
project(minishell)

set(CMAKE_CXX_STANDARD 11)

add_executable(minishell
        get_next_line.c
        includes/get_next_line.h
        libft/includes/libft.h
        libft/ft_addchar.c
        libft/ft_arrclr.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_dec_to_hex.c
        libft/ft_int_base.c
        libft/ft_intpositive.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_longatoi.c
        libft/ft_longest_tab.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_mini_printf.c
        libft/ft_nbrlen.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_return_to.c
        libft/ft_santas_little_helper.c
        libft/ft_sortrtab.c
        libft/ft_sorttab.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_string_of_spaces.c
        libft/ft_string_of_zeros.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        main.c includes/minishell.h ft_pathfinders.c ft_welcome.c ft_fork.c ft_signal.c ft_echo.c ft_env_n_unset.c ft_cd.c ft_setenv.c ft_easter.c ft_handle_few.c ft_check_exec.c ft_autocomp.c)
